scss/partials/_window.scss
/* ... */
.jsxc-preview {
  flex-shrink: 0;
  font-size: 0.8em;
  max-height: 130px;
  overflow: hidden;
  text-align: center;

  .jsxc-attachment {
    margin: 10px;
    position: relative;
  }

  .jsxc-image {
    border-radius: 5px;
    display: inline-block;
    max-height: 100%;
    max-width: 100%;

    img {
      height: auto;
      max-height: 100%;
      max-width: 100%;
      width: auto;
    }
  }
}

.jsxc-delete-handle {
  background-color: #dc4c4c;
  border: 3px solid #f5f5f5;
  border-radius: 50%;
  color: #fff;
  cursor: pointer;
  font-size: 3em;
  height: 1em;
  line-height: 0.65em;
  margin-right: -10px;
  margin-top: -10px;
  position: absolute;
  right: 0;
  top: 0;
  width: 1em;
  z-index: 100;

  &:hover {
    background-color: #f00;
  }
}

.jsxc-send-area {
  align-items: flex-end;
  align-items: center;
  background-color: $chatmessage-bg;
  display: flex;
  flex-shrink: 0;
  padding: 2px 0;
  width: 100%;

  .jsxc-menu-emoticons,
  .jsxc-file-transfer,
  .jsxc-transfer {
    flex-shrink: 0;

    [class^="jsxc-icon-"] {
      font-size: 23px;
    }
  }

  .jsxc-message-input {
    flex-grow: 1;
  }

  &.jsxc-contains-val {
    .jsxc-file-transfer,
    .jsxc-transfer {
      display: none;
    }
  }
}

.jsxc-message-input {
  @extend %scrollbar;
  background-color: transparent;
  border: 0;
  border-radius: 0;
  box-sizing: content-box !important;
  display: block;
  font-family: inherit;
  font-size: 1em;
  height: 1.4em;
  line-height: 1.4em;
  margin: 0;
  min-height: auto;
  outline: none;
  padding: 10px 5px 5px 0;
  resize: none;
  transition: height 0.2s;

  &::placeholder {
    color: $window-placeholder;
    opacity: 0.3;
  }

  .jsxc-large-send-area & {
    height: 100px;
  }
}

.jsxc-file-transfer {
  cursor: pointer;
  height: 40px;
  opacity: 0.3;
  overflow: hidden;
  position: relative;
  width: 44px;

  label {
    height: 0;
    overflow: hidden;
    position: absolute;
    top: 100%;
    width: 0;
  }

  &:hover {
    opacity: 0.5;
  }

  @media (min-width: 768px) {
    width: 34px;
  }
}

.jsxc-chatmessage {
  background-color: $chatmessage-bg;
  border-radius: 0.8em;
  clear: both;
  font-size: 1em;
  margin: 3px;
  outline: none;
  padding: 0.5em 0.7em;
  position: relative;
  word-wrap: break-word;

  &__footer {
    clear: both;
    color: $chatmessage-footer;
    display: flex;
    font-size: 0.8em;
    line-height: 1.2em;
    max-width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
    user-select: none;
    white-space: nowrap;

    .jsxc-timestamp {
      margin-right: 0.3em;
    }
  }

  .jsxc-error-content {
    background-color: var(--jsxc-color-warning);
    border-radius: 0.6em;
    font-size: 0.8em;
    font-style: italic;
    margin: 0.5em -0.5em -0.2em;
    padding: 0.2em 0.7em;

    &:empty {
      display: none;
    }

    &::before {
      content: "⚠ ";
      font-style: normal;
    }
  }

  p {
    clear: both;
    font-size: 1em;
    margin: 0;

    +p {
      margin-top: 0.7em;
    }
  }

  a {
    color: $chatmessage-a;
    display: inline-block;
    max-width: 100%;
    position: relative;
    text-decoration: underline;

    &[download]::before {
      background-color: rgba(255, 255, 255, 0.7);
      background-image: url("../images/download_icon_black.svg");
      background-position: center center;
      background-repeat: no-repeat;
      background-size: 3em;
      border-radius: 3px;
      bottom: 5px;
      content: " ";
      left: 0;
      opacity: 0;
      position: absolute;
      right: 0;
      top: 0;
      transition: opacity 0.5s;
    }

    &[download]:hover {
      &::before {
        opacity: 0.6;
      }
    }

    &.jsxc-geo {
      background-color: #fff;
      border-radius: 0.8em;
      display: block;
      padding: 1em 1em 1em 3em;

      &::before {
        background-color: #fff;
        background-image: url("../images/location_icon.svg");
        background-position: center center;
        background-repeat: no-repeat;
        background-size: contain;
        content: "";
        display: inline-block;
        height: 2em;
        margin-left: -2em;
        vertical-align: bottom;
        width: 2em;
      }
    }
  }

  img {
    max-width: 100%;
  }

  .jsxc-avatar {
    display: none;
  }

  .jsxc-quote {
    border-left: 3px solid #999;
    display: inline-block;
    opacity: 0.7;
    padding: 0 3px 0 5px;
    width: 100%; // margin-bottom: 5px;
  }
}
/* ... */

